--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ edition = "2018"
 nom = "6.0.0-alpha1"
 smallvec = "1.3.0"
 lexical = "5.2.0"
+
+[dev-dependencies]
+criterion = "0.3.1"
+
+[[bench]]
+name = "bench_parse"
+harness = false
