--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nom = "6.0.0-alpha1"
+nom = "6.1.2"
 smallvec = "1.3.0"
-lexical = "5.2.0"
+lexical = "5.2.2"
 
 [dev-dependencies]
 criterion = "0.3.1"
